{
  "version": 4,
  "terraform_version": "1.1.8",
  "serial": 417,
  "lineage": "56c39961-1481-d881-8764-a30717e56b7b",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "ALB-tf",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:319147242334:loadbalancer/app/Demo-ALG-tf/6845d2c4df9917af",
            "arn_suffix": "app/Demo-ALG-tf/6845d2c4df9917af",
            "desync_mitigation_mode": "defensive",
            "dns_name": "Demo-ALG-tf-1978855923.us-east-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_waf_fail_open": false,
            "id": "arn:aws:elasticloadbalancing:us-east-1:319147242334:loadbalancer/app/Demo-ALG-tf/6845d2c4df9917af",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "Demo-ALG-tf",
            "security_groups": [
              "sg-09f658b99d321bccb"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-01722acf6867638bf"
              },
              {
                "subnet_id": "subnet-0ba8f2fb669124427"
              }
            ],
            "subnets": [
              "subnet-01722acf6867638bf",
              "subnet-0ba8f2fb669124427"
            ],
            "tags": {
              "Project": "demo-assignment",
              "name": "Demo-AppLoadBalancer-tf"
            },
            "tags_all": {
              "Project": "demo-assignment",
              "name": "Demo-AppLoadBalancer-tf"
            },
            "vpc_id": "vpc-04b21eeb228e5a43e",
            "zone_id": "Z35SXDOTRQ7X7K"
          },
          "dependencies": [
            "aws_security_group.elb_sg",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.environment"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "front_end",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-east-1:319147242334:listener/app/Demo-ALG-tf/6845d2c4df9917af/261b97fd6bc077e6",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:319147242334:targetgroup/Demo-TargetGroup-tf/267dc576266648a9",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:319147242334:listener/app/Demo-ALG-tf/6845d2c4df9917af/261b97fd6bc077e6",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-1:319147242334:loadbalancer/app/Demo-ALG-tf/6845d2c4df9917af",
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": null,
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_lb.ALB-tf",
            "aws_lb_target_group.TG-tf",
            "aws_security_group.elb_sg",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.environment"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "TG-tf",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:319147242334:targetgroup/Demo-TargetGroup-tf/267dc576266648a9",
            "arn_suffix": "targetgroup/Demo-TargetGroup-tf/267dc576266648a9",
            "connection_termination": false,
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 2,
                "interval": 70,
                "matcher": "200,202",
                "path": "/index.html",
                "port": "80",
                "protocol": "HTTP",
                "timeout": 60,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:319147242334:targetgroup/Demo-TargetGroup-tf/267dc576266648a9",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "name": "Demo-TargetGroup-tf",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-04b21eeb228e5a43e"
          },
          "dependencies": [
            "module.vpc.aws_vpc.environment"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "elb_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:319147242334:security-group/sg-09f658b99d321bccb",
            "description": "security-group-load balancer",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-09f658b99d321bccb",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTP",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "security-group-load balancer",
            "name_prefix": "",
            "owner_id": "319147242334",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "SG-load balancer",
              "Project": "demo-assignment"
            },
            "tags_all": {
              "Name": "SG-load balancer",
              "Project": "demo-assignment"
            },
            "timeouts": null,
            "vpc_id": "vpc-04b21eeb228e5a43e"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.environment"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "webserver_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:319147242334:security-group/sg-0817cec95297bc84c",
            "description": "security-group-EC2",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0817cec95297bc84c",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTP",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTP",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "security group-Ec2",
            "name_prefix": "",
            "owner_id": "319147242334",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "security-group-EC2",
              "Project": "demo-assignment"
            },
            "tags_all": {
              "Name": "security-group-EC2",
              "Project": "demo-assignment"
            },
            "timeouts": null,
            "vpc_id": "vpc-04b21eeb228e5a43e"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.environment"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_eip",
      "name": "environment",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-008a3ff74ef1d9a98",
            "domain": "vpc",
            "id": "eipalloc-008a3ff74ef1d9a98",
            "network_border_group": "us-east-1",
            "public_dns": "ec2-44-196-213-146.compute-1.amazonaws.com",
            "public_ip": "44.196.213.146",
            "public_ipv4_pool": "amazon",
            "vpc": true
          }
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-00ef961cb6aee563e",
            "domain": "vpc",
            "id": "eipalloc-00ef961cb6aee563e",
            "network_border_group": "us-east-1",
            "public_dns": "ec2-3-229-70-47.compute-1.amazonaws.com",
            "public_ip": "3.229.70.47",
            "public_ipv4_pool": "amazon",
            "vpc": true
          }
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "environment",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:319147242334:internet-gateway/igw-06cb36357646fa29a",
            "id": "igw-06cb36357646fa29a",
            "owner_id": "319147242334",
            "tags": {
              "Name": "development111-igw"
            },
            "tags_all": {
              "Name": "development111-igw"
            },
            "vpc_id": "vpc-04b21eeb228e5a43e"
          },
          "dependencies": [
            "module.vpc.aws_vpc.environment"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "environment",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-008a3ff74ef1d9a98",
            "connectivity_type": "public",
            "id": "nat-064257d5652ca6e6b",
            "network_interface_id": "eni-08cb6162dc00a4d59",
            "private_ip": "10.0.1.166",
            "public_ip": "44.196.213.146",
            "subnet_id": "subnet-01722acf6867638bf"
          },
          "dependencies": [
            "module.vpc.aws_eip.environment",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.environment"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-00ef961cb6aee563e",
            "connectivity_type": "public",
            "id": "nat-0948f42248ff7a15e",
            "network_interface_id": "eni-02adc896239d8d3e7",
            "private_ip": "10.0.2.24",
            "public_ip": "3.229.70.47",
            "subnet_id": "subnet-0ba8f2fb669124427"
          },
          "dependencies": [
            "module.vpc.aws_eip.environment",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.environment"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "private_nat_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-02d3669d2488a4dbc1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-064257d5652ca6e6b",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-02d3669d2488a4dbc",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_eip.environment",
            "module.vpc.aws_nat_gateway.environment",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.environment"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-0a377e709843751cb1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-0948f42248ff7a15e",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0a377e709843751cb",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_eip.environment",
            "module.vpc.aws_nat_gateway.environment",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.environment"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "public_internet_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-06cb36357646fa29a",
            "id": "r-rtb-08f9f81988a90a3951080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-08f9f81988a90a395",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_internet_gateway.environment",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_vpc.environment"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:319147242334:route-table/rtb-02d3669d2488a4dbc",
            "id": "rtb-02d3669d2488a4dbc",
            "owner_id": "319147242334",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "development111-private"
            },
            "tags_all": {
              "Name": "development111-private"
            },
            "timeouts": null,
            "vpc_id": "vpc-04b21eeb228e5a43e"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.environment"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:319147242334:route-table/rtb-0a377e709843751cb",
            "id": "rtb-0a377e709843751cb",
            "owner_id": "319147242334",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "development111-private"
            },
            "tags_all": {
              "Name": "development111-private"
            },
            "timeouts": null,
            "vpc_id": "vpc-04b21eeb228e5a43e"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.environment"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:319147242334:route-table/rtb-08f9f81988a90a395",
            "id": "rtb-08f9f81988a90a395",
            "owner_id": "319147242334",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "development111-public"
            },
            "tags_all": {
              "Name": "development111-public"
            },
            "timeouts": null,
            "vpc_id": "vpc-04b21eeb228e5a43e"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.environment"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0b86cbe55cb4da0bf",
            "route_table_id": "rtb-02d3669d2488a4dbc",
            "subnet_id": "subnet-061f9c61d4b3ac44a"
          },
          "dependencies": [
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.environment"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-03c1b6a3a67c1d894",
            "route_table_id": "rtb-0a377e709843751cb",
            "subnet_id": "subnet-0886495f656433781"
          },
          "dependencies": [
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.environment"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0e1070d86915125a1",
            "route_table_id": "rtb-08f9f81988a90a395",
            "subnet_id": "subnet-01722acf6867638bf"
          },
          "dependencies": [
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.environment"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-00a1da9424a0624d7",
            "route_table_id": "rtb-08f9f81988a90a395",
            "subnet_id": "subnet-0ba8f2fb669124427"
          },
          "dependencies": [
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.environment"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:319147242334:subnet/subnet-061f9c61d4b3ac44a",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.101.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-061f9c61d4b3ac44a",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "319147242334",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "development111-private-0"
            },
            "tags_all": {
              "Name": "development111-private-0"
            },
            "vpc_id": "vpc-04b21eeb228e5a43e"
          },
          "dependencies": [
            "module.vpc.aws_vpc.environment"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:319147242334:subnet/subnet-0886495f656433781",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.102.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0886495f656433781",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "319147242334",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "development111-private-1"
            },
            "tags_all": {
              "Name": "development111-private-1"
            },
            "vpc_id": "vpc-04b21eeb228e5a43e"
          },
          "dependencies": [
            "module.vpc.aws_vpc.environment"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:319147242334:subnet/subnet-01722acf6867638bf",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-01722acf6867638bf",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "319147242334",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "development111-public-0"
            },
            "tags_all": {
              "Name": "development111-public-0"
            },
            "vpc_id": "vpc-04b21eeb228e5a43e"
          },
          "dependencies": [
            "module.vpc.aws_vpc.environment"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:319147242334:subnet/subnet-0ba8f2fb669124427",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0ba8f2fb669124427",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "319147242334",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "development111-public-1"
            },
            "tags_all": {
              "Name": "development111-public-1"
            },
            "vpc_id": "vpc-04b21eeb228e5a43e"
          },
          "dependencies": [
            "module.vpc.aws_vpc.environment"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "environment",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:319147242334:vpc/vpc-04b21eeb228e5a43e",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-04216086583356ec4",
            "default_route_table_id": "rtb-06ea9b5bda52b4150",
            "default_security_group_id": "sg-09f698a9b448787b0",
            "dhcp_options_id": "dopt-0bb97e7ddbed74f37",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-04b21eeb228e5a43e",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-06ea9b5bda52b4150",
            "owner_id": "319147242334",
            "tags": {
              "Name": "development111"
            },
            "tags_all": {
              "Name": "development111"
            }
          },
          "create_before_destroy": true
        }
      ]
    }
  ]
}